[gd_scene load_steps=11 format=3 uid="uid://8sxwa25paubj"]

[ext_resource type="Script" uid="uid://b4pfhg6yd64m6" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerSelectionMainItem/player_selection_main_item.gd" id="1_10qpb"]
[ext_resource type="Texture2D" uid="uid://j4xdgdied5dy" path="res://Scenes/Weapons/Primary/Revolver/Revolver.png" id="1_g1m43"]
[ext_resource type="Script" uid="uid://calba43hixlc4" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerSelectionMainItem/buttons.gd" id="2_fv8mp"]
[ext_resource type="Texture2D" uid="uid://5q8q7xma7uqd" path="res://Misc/Inkscape/dash.svg" id="2_mmeor"]
[ext_resource type="Texture2D" uid="uid://cvnhgdu8kddk7" path="res://Scenes/Weapons/Powerups/Splitter/splitter.png" id="3_el3m1"]
[ext_resource type="Texture2D" uid="uid://dsh8x2qcwcie" path="res://Scenes/UI/PlayerCustomizationMenu/controls.svg" id="4_10qpb"]
[ext_resource type="Texture2D" uid="uid://btcmiq31qee7d" path="res://Scenes/Player/CharacterBody.png" id="5_fv8mp"]
[ext_resource type="Texture2D" uid="uid://dy0q7mppvj7j1" path="res://Scenes/Player/CharacterOutline.png" id="6_jre07"]
[ext_resource type="Texture2D" uid="uid://1jtgnfgq03qx" path="res://Scenes/UI/PlayerCustomizationMenu/close.svg" id="7_fv8mp"]
[ext_resource type="Script" uid="uid://c5xduddhansus" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerSelectionMainItem/sprite.gd" id="7_jre07"]

[node name="Main" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10qpb")

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_fv8mp")

[node name="Preset" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("4_10qpb")
icon_alignment = 1
expand_icon = true

[node name="PrimaryWeapon" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("1_g1m43")
icon_alignment = 1
expand_icon = true

[node name="MovementBonus" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("2_mmeor")
icon_alignment = 1
expand_icon = true

[node name="Powerup" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_el3m1")
icon_alignment = 1
expand_icon = true

[node name="PlayerType" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Local"

[node name="DeletePlayer" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("7_fv8mp")
icon_alignment = 1
expand_icon = true

[node name="Sprite" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
script = ExtResource("7_jre07")

[node name="Name" type="Label" parent="Sprite"]
layout_mode = 2
text = "Whatever name"
horizontal_alignment = 1

[node name="Player" type="MarginContainer" parent="Sprite"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Body" type="TextureRect" parent="Sprite/Player"]
modulate = Color(0, 1, 1, 1)
layout_mode = 2
texture = ExtResource("5_fv8mp")
expand_mode = 3
stretch_mode = 5

[node name="Outline" type="TextureRect" parent="Sprite/Player"]
modulate = Color(1, 0, 1, 1)
layout_mode = 2
texture = ExtResource("6_jre07")
expand_mode = 3
stretch_mode = 5

[node name="Eyes" type="TextureRect" parent="Sprite/Player"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="Mouth" type="TextureRect" parent="Sprite/Player"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="Weapons" type="HBoxContainer" parent="Sprite"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Primary" type="TextureRect" parent="Sprite/Weapons"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_g1m43")
expand_mode = 2
stretch_mode = 5

[node name="Powerup" type="TextureRect" parent="Sprite/Weapons"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_el3m1")
expand_mode = 2
stretch_mode = 5

[node name="MovementBonus" type="TextureRect" parent="Sprite/Weapons"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_mmeor")
expand_mode = 3
stretch_mode = 5

[connection signal="pressed" from="Buttons/Preset" to="." method="_on_preset_pressed"]
[connection signal="pressed" from="Buttons/PrimaryWeapon" to="." method="_on_primary_weapon_pressed"]
[connection signal="pressed" from="Buttons/MovementBonus" to="." method="_on_movement_bonus_pressed"]
[connection signal="pressed" from="Buttons/Powerup" to="." method="_on_powerup_pressed"]
[connection signal="pressed" from="Buttons/PlayerType" to="." method="_on_player_type_pressed"]
[connection signal="pressed" from="Buttons/DeletePlayer" to="." method="_on_delete_player_pressed"]
